@@ -65,15 +65,5 @@ bugtracker.github = user:plicease
 repository.github = user:plicease
 homepage = http://perl.wdlabs.com/%{dist}/
 
-[ReadmeAnyFromPod]
-type     = text
-filename = README
-location = build
-
-[ReadmeAnyFromPod / ReadMePodInRoot]
-type     = pod
-filename = README.pod
-location = root
-
 [Author::Plicease::TransformTravis]
 
