@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - Merge PlugAuth::Client distro into this one.
+  - Merge PlugAuth::Plugin::Audit into this distro.
+  - Merge PlugAuth::Client distro into this distro.
 
 0.27      2014-12-09 10:24:00 America/New_York
   - use functional Mojo::JSON API
